Implement Add Product Page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Store</title>
-  <link rel="stylesheet" href="css/bulma.min.css">
+  <link rel="stylesheet" href="/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/css/bulma.min.css">
 </head>
 
 <body>
